LinkedList Update
- Changed sonimortetList from ArrayList to LinkedList (getLast runs in constant time)
- Changed how menuSceneImages are imported in Sirtet.java
- Cleaned up some declarations and initializations
- Expanded rotate ternary operators of Sonimortet.java to if/else's for clarity
- Refactored some variables
- Checks for row clears on new sonimortet instead of if sonimortet is in top row
- shiftAbove now uses an enhanced for loop for looping in constant time and readability
- GameOverScene now doesn't accept spaces